--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-intl-native",
   "version": "2.1.1",
   "description": "Convenience components for react-intl's `format*` API in React Native",
-  "main": "dist/react-intl-native.js",
+  "main": "src/index.js",
   "jsnext:main": "dist/react-intl-native.es2015.js",
   "scripts": {
     "prebuild": "rimraf dist",
